# rust-kepin

./: .env.example  .gitignore  Cargo.toml  build.rs
media/6942b4ce0591cd64c12de9c1/others/: 20251218_112304_others.xlsx  20251218_113129_others.xlsx  20251218_225439_others.xlsx  20251218_225653_others.xlsx
src/: main.rs
src/api/: analyze.rs  auth.rs  mod.rs  uploads.rs
src/api/smart/: deep_analyze.rs  fast_analyze.rs  mod.rs  normal_analyze.rs
src/core/: auth_utils.rs  mod.rs
src/db/: mod.rs
src/models/: financial.rs  mod.rs  upload.rs  user.rs
src/repository/: financial_repo.rs  mod.rs  upload_repo.rs  user_repo.rs
src/services/: extractor_client.rs  mod.rs
test/: test_api.md
