[package]
name = "kepinAPI"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
mongodb = "2.8"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
jsonwebtoken = "9.0"
bcrypt = "0.15"
tower-cookies = "0.10"
tower-http = { version = "0.6.8", features = ["trace"] }
